Unreleased
  * Path operations now accept anything that implements AsRef<ffi::OsStr>,
    which enables support for path::Paths in addition to strs.
  * Breaking change: Image media types are now represented by an enum instead of
    magic strings. It is easy to convert between the two forms using ::from().
  * Breaking change: get/set_tag_long() are renamed get/set_tag_numeric().

2016-03-30 - v0.3.3
  * Dependency cleanup: removed rustc-serialize & bumped gexiv2-sys.
  * Types implement more common useful traits.
  * Documentation improvements, including bundling setup instructions.

2015-09-11 - v0.3.2
  * Dependency version bump (gexiv2-sys to 0.5 and libc to 0.2).

2015-09-20 - v0.3.1
  * Fixed memory leak of some values returned over FFI boundary.

2015-09-13 - v0.3.0
  * All instances of success/failure boolean return values are now Results.
  * Fixed critical bug that caused dangling pointers and mysterious errors.
  * Updated to use latest gexiv2-sys FFI declarations.

2015-04-30 - v0.2.3
  * Library now builds with regular stable rustc.

2015-04-03 - v0.2.2
  * Updated to work with 1.0.0-nightly (d17d6e7f1 2015-04-02) (Note: not Beta!).
  * More permissive and up-to-date dependency version requirements.

2015-03-02 - v0.2.1
  * Added support for loading metadata from byte-array data buffers.
  * Split gexiv2 FFI declarations off into separate gexiv2-sys crate dependency.

2015-03-01 - v0.2.0
  * The "get_tag_type" function now returns an item from an enum of data types.
  * Some methods that used to return magic numbers on error now return Options.
  * The "get_mime_type" method is renamed "get_media_type" for correctness.
  * Custom Rational type replaced by common num::rational::Ratio.

2015-02-25 - v0.1.0
  * First development release.
  * Added ability to set multiple string values for a tag.
  * Fixed array terminator bug when getting list of Exif tags.

2015-02-21 - v0.1.0-pre
  * First preview release to solicit code review and feedback.